--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "sonarqube-scanner": "^2.8.1",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage --env=jsdom --testResultsProcessor ./node_modules/jest-sonar-reporter/index.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -49,6 +50,13 @@
     "@types/lodash": "^4.14.184",
     "@types/lodash.debounce": "^4.0.7",
     "css-modules-typescript-loader": "^4.0.1",
+    "jest-sonar-reporter": "^2.0.0",
     "typescript-plugin-css-modules": "^3.4.0"
+  },
+  "jestSonar": {
+    "sonar56x": true,
+    "reportPath": "testResults",
+    "reportFile": "sonar-report.xml",
+    "indent": 4
   }
 }
