--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.testExecutionReportPaths= ./testResults/sonar-report.xml,
 
 sonar.host.url=http://localhost:9003,
 
-sonar.source = ./src,
+sonar.sources = ./src,
 sonar.test.exclusions=**/src/**.test.tsx,
 sonar.exclusions= **/src/**.test.tsx,
 
